fix: alignments and other minor issues (#27)
* fix: alignment issues, footer

* fix: fb link

* feat: navbar animations

* feat: favicon, meta tags

* fix: meta tags

--- a/land_page.css
+++ b/land_page.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap');
 
 li {
     list-style: none;
@@ -32,15 +32,25 @@ body {
     display: inline;
     padding: 0.5rem 1rem;
     color: #FF5B5B;
+    transition: 0.5s;
+}
+
+.nav-link:hover{
+    transition: 0.5s;
+    color: #7e0000;
+}
+
+header {
+    height: 100vh;
 }
 
 .container {
     padding: 0;
     margin: 0;
+    width: 100vw;
 }
 
-.row {
-    
+.header-row {
     font-size: 125%;
     text-align: center;
 }
@@ -48,9 +58,10 @@ body {
 .header-content {
     background-image: url(../images/homepage.png);
     background-size: cover;
-    background-position: center;
+    /* background-position: center bottom 10vh; */
     background-repeat: no-repeat;
-    height: 95vh;
+    background-attachment: fixed;
+    height: 100vh;
 }
 
 #literary {
@@ -60,6 +71,12 @@ body {
                 1px 1px 0 #FF5B5B,
                 1px -1px 0 #FF5B5B,
                 -1px -1px 0 #FF5B5B;
+}
+
+@media screen and (max-width: 600px){
+    #malayalam {
+        display: none !important;
+    }
 }
 .about{
     position: relative;
@@ -167,7 +184,7 @@ padding-right: var(--page-margin);
     height: 11vw;
     width: 30vw;
     border-radius: 10px;
-    background-image: linear-gradient(to bottom,rgba(222, 186, 186, 0.819), #FE5558,#8F0000);
+    background-image: linear-gradient(to bottom,rgba(222, 186, 186, 0), #FE5558,#8F0000);
     z-index: 1;
     
 }
@@ -197,6 +214,7 @@ padding-right: var(--page-margin);
     background-position: center;
     background-repeat: no-repeat;
     height: 50vw;
+    padding: 50px 0 50px 0;
 }
 .column {
     position: relative;
@@ -235,7 +253,7 @@ padding-right: var(--page-margin);
     color:#8F0000;
     font-size: 3.5vw;
     position: absolute;
-    left:15%;
+    left:10%;
     font-weight: bold;
 }
 .text3 p{
@@ -255,14 +273,14 @@ padding-right: var(--page-margin);
 .text4{
     color:white;
     position: absolute;
-    width: 80%;
-    bottom: 5%;
+    width: 100%;
+    bottom: 10%;
     right:10%;
-    height:27vw;
+    height:22vw;
     
 }
 .text4 h1{
-    right:19%;
+    right:40%;
     position:absolute;
     color:#8F0000;
     font-family: Montserrat;
@@ -272,7 +290,7 @@ padding-right: var(--page-margin);
 }
 .text4 p{
     position:absolute;
-    right:5%;
+    right:10%;
     font-size:1.1vw;
     color:white;
     bottom:0;
@@ -281,7 +299,12 @@ padding-right: var(--page-margin);
 }
 .footer{
     position: relative;
+    padding-top:5vh;
 }
+.footer #logo{
+    margin-left:2%;
+}
+
 .footer img{
     width: 20%;
 
@@ -289,20 +312,22 @@ padding-right: var(--page-margin);
 .cont{
     font-size:1.5vw;
     position: absolute;
-    left:20%;
-    top:0;
+    left:22%;
+    top: 0;
+    padding-top: 2vh;
 }
 .cont h2{
-    padding-bottom: 2%;
+    padding: 2% 0 2% 0;
     margin:0;
     font-size: 1.5vw;
     color: #444;
-    font-weight: normal;
+    font-weight: lighter;
 }
 .cont a{
     font-size:1.5vw ;
     margin-top:2vw;
-    color:#444
+    color:#444;
+    font-weight: lighter;
 }
 .soc{
     margin:10px;
@@ -310,14 +335,17 @@ padding-right: var(--page-margin);
 .soc-item{
     display:inline;
     padding-right:5%;
-    
+    margin-right: 1.3%;
+}
+.soc-item #yt {
+    width: 2.6%;
 }
 .soc-item img{
     width:2.3%;
     
 }
 .yt{
-    padding-top:1%;
+    padding-top:5vh;
     padding-bottom:3%;
     padding-right: 2%;
     top: 0;
